[package]
name = "destruct"
version = "0.1.0"
authors = ["Jiaming Lu <jiaminglu@live.com>"]
edition = "2018"

[dependencies]
destruct-lib = { path = "destruct-lib" }
destruct-derive = { path = "destruct-derive" }

[workspace]
members = [
  "destruct-derive",
  "destruct-lib",
  "destruct-parser",
]
