[package]
name = "destruct-lib"
version = "0.1.1"
authors = ["Jiaming Lu <jiaminglu@live.com>"]
edition = "2018"
license = "MIT"
description = "Destruct structs and enums for simpler combinator implementation"
homepage = "https://github.com/jiaminglu/destruct"
repository = "https://github.com/jiaminglu/destruct"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
destruct-derive = { version = "0.1", path = "../destruct-derive" }
derive-new = "0.5"

[dev-dependencies]
err-derive = "0.1"
