[package]
name = "destruct-parser"
version = "0.1.0"
authors = ["Jiaming Lu <jiaminglu@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1"
derive-new = "0.5"
destruct = "0.1"
byteorder = "1.2"

[patch.crates-io]
destruct = { path = ".." }
